--- a/CodeHubDesktop/MultiLanguage/Language/Lang.fa-IR.resx
+++ b/CodeHubDesktop/MultiLanguage/Language/Lang.fa-IR.resx
@@ -135,8 +135,14 @@
   <data name="CheckForUpdate" xml:space="preserve">
     <value>بررسی بروزرسانی</value>
   </data>
+  <data name="Clear" xml:space="preserve">
+    <value>پاک کن</value>
+  </data>
   <data name="ContactUs" xml:space="preserve">
     <value>تماس با ما</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>ایجاد</value>
   </data>
   <data name="Created" xml:space="preserve">
     <value>ایجاد در</value>
@@ -146,6 +152,12 @@
   </data>
   <data name="CurrentVer" xml:space="preserve">
     <value>نسخه فعلی</value>
+  </data>
+  <data name="Detail" xml:space="preserve">
+    <value>توضیحات بیشتر...</value>
+  </data>
+  <data name="DetailTitle" xml:space="preserve">
+    <value>توضیحات بیشتر (اختیاری)</value>
   </data>
   <data name="Developer" xml:space="preserve">
     <value>برنامه نویس مهدی حسینی</value>
@@ -186,11 +198,32 @@
   <data name="Published" xml:space="preserve">
     <value>انتشار در</value>
   </data>
+  <data name="SelectLanguage" xml:space="preserve">
+    <value>زبان خودتان را انتخاب کنید...</value>
+  </data>
+  <data name="SelectLanguageTitle" xml:space="preserve">
+    <value>انتخاب زبان اسنیپت</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>تنظیمات</value>
   </data>
+  <data name="ShieldSubject" xml:space="preserve">
+    <value>لینک به حافظه کپی شد</value>
+  </data>
   <data name="SnippetHistory" xml:space="preserve">
     <value>اسنیپت های قبلی</value>
+  </data>
+  <data name="Subject" xml:space="preserve">
+    <value>عنوان...</value>
+  </data>
+  <data name="SubjectTitle" xml:space="preserve">
+    <value>عنوان اسنیپت</value>
+  </data>
+  <data name="TabLocal" xml:space="preserve">
+    <value>اسنیپت های شما</value>
+  </data>
+  <data name="TabOther" xml:space="preserve">
+    <value>اسنیپت های دیگران</value>
   </data>
   <data name="Update" xml:space="preserve">
     <value>بروزرسانی</value>
