--- a/CodeHubDesktop/MultiLanguage/Language/Lang.fa-IR.resx
+++ b/CodeHubDesktop/MultiLanguage/Language/Lang.fa-IR.resx
@@ -138,6 +138,9 @@
   <data name="Clear" xml:space="preserve">
     <value>پاک کن</value>
   </data>
+  <data name="Close" xml:space="preserve">
+    <value>ببند</value>
+  </data>
   <data name="ContactUs" xml:space="preserve">
     <value>تماس با ما</value>
   </data>
@@ -152,6 +155,30 @@
   </data>
   <data name="CurrentVer" xml:space="preserve">
     <value>نسخه فعلی</value>
+  </data>
+  <data name="DataGridDate" xml:space="preserve">
+    <value>تاریخ انتشار</value>
+  </data>
+  <data name="DataGridDetail" xml:space="preserve">
+    <value>جزئیات</value>
+  </data>
+  <data name="DataGridLanguage" xml:space="preserve">
+    <value>زبان</value>
+  </data>
+  <data name="DataGridLink" xml:space="preserve">
+    <value>لینک</value>
+  </data>
+  <data name="DataGridScript" xml:space="preserve">
+    <value>اسکریپت</value>
+  </data>
+  <data name="DataGridSId" xml:space="preserve">
+    <value>آیدی اسنیپت</value>
+  </data>
+  <data name="DataGridTitle" xml:space="preserve">
+    <value>عنوان</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>حذف</value>
   </data>
   <data name="Detail" xml:space="preserve">
     <value>توضیحات بیشتر...</value>
@@ -178,7 +205,7 @@
     <value>کدهاب</value>
   </data>
   <data name="HamburgerMenuHeaderItem" xml:space="preserve">
-    <value>کدهاب 1.0.0</value>
+    <value>منو</value>
   </data>
   <data name="HistoryDate" xml:space="preserve">
     <value>تاریخ انتشار</value>
@@ -209,6 +236,9 @@
   </data>
   <data name="Published" xml:space="preserve">
     <value>انتشار در</value>
+  </data>
+  <data name="Searchbar" xml:space="preserve">
+    <value>جستجوی عنوان...</value>
   </data>
   <data name="SearchbarPlaceHolder" xml:space="preserve">
     <value>آیدی اسنیپت یا لینک...</value>
